--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
             <version>1.18.30</version>
             <scope>provided</scope>
         </dependency>
+        
+        <!-- Testing -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
