--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <packaging>jar</packaging>
 
     <groupId>org.example</groupId>
-    <artifactId>course-selection-server</artifactId>
+    <artifactId>course-allocation-server</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
